# MindScape

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
exe/: CMakeLists.txt
exe/source/: main.cpp
lib/: CMakeLists.txt
lib/include/: MindScapeGame.h
lib/include/MindScape/Core/: EventController.h  TemplateRegion.h
lib/include/MindScape/Utils/: DllUtils.h
lib/source/: MindScapeGame.cpp
lib/source/Core/: EventController.cpp
